# gsm-tool

./: .gitignore  Cargo.toml  README.md  install.sh  oranda.json
src/: install.ps1  install.sh  main.rs  test.sh  xor_tool.rs
